--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	},
 	"browser_action": {
 		"default_icon": "images/buttonIcons/default.png",
-		"default_title": "Checker Plus for Google Drive™",
+		"default_title": "Save Pages to Google Drive™",
 		"default_popup": "popup.html"
 	},
 	"icons": {
@@ -47,12 +47,7 @@
         "matches": ["<all_urls>"],
         "all_frames": false,
         "js": ["js/content.js"]
-    }],
-	"optional_permissions": [
-		"background",
-		"*://*.googleusercontent.com/*",
-		"https://docs.google.com/"
-	],
+    }],	
 	"storage": {
 		"managed_schema": "schema.json"
 	},
@@ -80,6 +75,6 @@
 		"pageinfo-bar-compressed.html", 
 		"js/shadowloader-compressed.js", 
 		"js/resourceloader-compressed.js"
-	],
-	"gcm_sender_id": "103953800507"
+	]
+	
 }
